Refactor Mealie taxonomy management and configuration
- Removed deprecated scripts related to taxonomy management and categorization.
- Introduced a new configuration system using JSON for better management of settings.
- Moved category and tag definitions to separate JSON files in the configs directory.
- Updated scripts to utilize the new configuration system for environment variables and defaults.
- Enhanced error handling for missing configuration values.
- Improved code readability and maintainability by consolidating common functionality.

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,27 @@
-# Mealie
-MEALIE_URL=http://your.server.ip.address:9000/api
+# Secrets
 MEALIE_API_KEY=your_mealie_api_key
+OPENAI_API_KEY=your_openai_api_key
 
-# Ollama
+# Endpoint / model overrides (optional; defaults come from configs/config.json)
+MEALIE_URL=http://your.server.ip.address:9000/api
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4o-mini
 OLLAMA_URL=http://localhost:11434/api
 OLLAMA_MODEL=mistral:7b
 
-# ChatGPT / OpenAI-compatible
-OPENAI_API_KEY=your_openai_api_key
-OPENAI_MODEL=gpt-4o-mini
-# Optional override for OpenAI-compatible endpoints
-# OPENAI_BASE_URL=https://api.openai.com/v1
-
-# Categorizer tuning
+# Runtime tuning overrides (optional)
 BATCH_SIZE=2
 MAX_WORKERS=3
-# Optional cache override shared by categorizer scripts
-# CACHE_FILE=cache/results.json
+QUERY_RETRIES=3
+QUERY_RETRY_BASE_SECONDS=1.25
+OPENAI_HTTP_RETRIES=3
+OPENAI_REQUEST_TIMEOUT=120
+OLLAMA_HTTP_RETRIES=3
+OLLAMA_REQUEST_TIMEOUT=180
+TAG_MAX_NAME_LENGTH=24
+TAG_MIN_USAGE=0
+
+# Optional path overrides
+TAXONOMY_CATEGORIES_FILE=configs/taxonomy/categories.json
+TAXONOMY_TAGS_FILE=configs/taxonomy/tags.json
+TAXONOMY_AUDIT_OUTPUT=reports/taxonomy_audit_report.json
