Rename from mealie_scripts to mealie_organizer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ dev = [
 ]
 
 [project.scripts]
-mealie-categorizer = "mealie_scripts.recipe_categorizer:main"
-mealie-taxonomy = "mealie_scripts.taxonomy_manager:main"
-mealie-taxonomy-audit = "mealie_scripts.audit_taxonomy:main"
+mealie-categorizer = "mealie_organizer.recipe_categorizer:main"
+mealie-taxonomy = "mealie_organizer.taxonomy_manager:main"
+mealie-taxonomy-audit = "mealie_organizer.audit_taxonomy:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
