Add TAXONOMY_REFRESH_MODE configuration and enhance taxonomy refresh functionality
- Introduced TAXONOMY_REFRESH_MODE in .env.example and docker-compose.yml to control taxonomy refresh behavior.
- Updated README.md to document the new refresh mode options: 'merge' and 'replace'.
- Modified taxonomy_manager.py to accept and process the new refresh mode argument.
- Enhanced entrypoint.sh to utilize the TAXONOMY_REFRESH_MODE environment variable.
- Updated test_taxonomy_manager.py with tests for the new refresh mode logic.
- Added 'Originals' category to categories.json and updated cookbook descriptions for clarity.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ OPENAI_MODEL=gpt-4o-mini
 # Example for Docker on Linux host: http://host.docker.internal:11434/api
 OLLAMA_URL=http://host.docker.internal:11434/api
 
+# Taxonomy refresh mode for TASK=taxonomy-refresh
+# merge: keep existing categories/tags and add missing from templates
+# replace: delete existing categories/tags first, then import templates
+TAXONOMY_REFRESH_MODE=merge
+
 # Optional performance overrides
 # BATCH_SIZE=2
 # MAX_WORKERS=3
